Fix all critical analyze errors - ready for deployment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Run Flutter analyze
         working-directory: ./aether_corp_web
-        run: flutter analyze --fatal-infos
+        run: flutter analyze --fatal-warnings
 
       - name: Check formatting
         working-directory: ./aether_corp_web
