--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,14 @@ jobs:
     - name: Build Flutter web app
       run: |
         cd aether_corp_web
-        flutter build web --release
+        flutter build web --release --verbose
+        if [ ! -f "build/web/index.html" ]; then
+          echo "❌ Build failed - index.html not found"
+          ls -la build/web/ || echo "Build directory doesn't exist"
+          exit 1
+        fi
+        echo "✅ Build successful - index.html found"
+        ls -la build/web/ | head -20
         
     - name: Deploy to Cloudflare Pages
       uses: cloudflare/pages-action@v1
