Fix: Update .gitignore to allow web source files, add web directory to git

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ ios/Runner/GeneratedPluginRegistrant.*
 # macOS
 macos/Flutter/GeneratedPluginRegistrant.swift
 
-# Web
-web/
+# Web (only ignore build output, not source files)
+**/build/web/
 
 # IDE
 .vscode/
