--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,3 +55,4 @@ jobs:
         directory: aether_corp_web/build/web
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
         wranglerVersion: '3'
+        # Trigger deployment after adding CLOUDFLARE_ACCOUNT_ID secret
