--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,10 @@ on:
     branches: [ main, develop ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  deployments: write
+
 env:
   FLUTTER_VERSION: '3.35.6'
   NODE_VERSION: '18'
