--- a/aether_corp_web/web/manifest.json
+++ b/aether_corp_web/web/manifest.json
@@ -1,23 +1,29 @@
 {
-    "name": "aether_corp_web",
-    "short_name": "aether_corp_web",
-    "start_url": ".",
+    "name": "AetherCorp - Elite AI, Cloud, and Data Consultancy",
+    "short_name": "AetherCorp",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
-    "orientation": "portrait-primary",
+    "background_color": "#1A365D",
+    "theme_color": "#1A365D",
+    "description": "Transform your business with enterprise AI, cloud, and data solutions. AWS, GCP, Azure, AI/ML, Big Data, and DevOps services.",
+    "orientation": "any",
     "prefer_related_applications": false,
+    "scope": "/",
+    "categories": ["business", "productivity", "education"],
+    "lang": "en-US",
+    "dir": "ltr",
     "icons": [
         {
             "src": "icons/Icon-192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         },
         {
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         },
         {
             "src": "icons/Icon-maskable-192.png",
