--- a/aether_corp_web/pubspec.yaml
+++ b/aether_corp_web/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   
   # Animations
   flutter_animate: ^4.5.0
+  animated_text_kit: ^4.2.2
   
   # UI components
   flutter_svg: ^2.0.10+1
